fix css style to center logo on mobile

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -19,7 +19,6 @@
 
     #apidocs-api header.header h1 {
         display: inline-block;
-        margin-left: 28%;
     }
 
     #documenter_sidebar {
